Update1 package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,7 +56,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
